src/test/deca/context/valid/mod_int.deca
/*
    Description : Test si l'application d'un modulo à des nombres entiers est reconnue

    Résultat : OK
*/
{
    int x = 5 % 10;
}
// @expected_tree unknown

